--- a/mods/libraries/moonlight.pw.toml
+++ b/mods/libraries/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.11.41-fabric.jar"
+filename = "moonlight-1.20-2.12.4-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/4yoFIJbS/moonlight-1.20-2.11.41-fabric.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/nbhmloUo/moonlight-1.20-2.12.4-fabric.jar"
 hash-format = "sha1"
-hash = "d056b665a43a249771e050d12d0d2cd50df3dd15"
+hash = "669761a7cc7246558c6f5f22b1415e736bbb2a6b"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "4yoFIJbS"
+version = "nbhmloUo"
