--- a/mods/content/supplementaries/amendments.pw.toml
+++ b/mods/content/supplementaries/amendments.pw.toml
@@ -1,13 +1,13 @@
 name = "Amendments"
-filename = "amendments-1.20-1.2.5-fabric.jar"
+filename = "amendments-1.20-1.2.8-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6iTJugQR/versions/5z6ELx20/amendments-1.20-1.2.5-fabric.jar"
+url = "https://cdn.modrinth.com/data/6iTJugQR/versions/Fk0Km5bb/amendments-1.20-1.2.8-fabric.jar"
 hash-format = "sha1"
-hash = "6f6ae020c21d19099175667a07ea074c59b46962"
+hash = "38b6fbbceae07eb13eeff51b2671d4b1e7d858e1"
 
 [update]
 [update.modrinth]
 mod-id = "6iTJugQR"
-version = "5z6ELx20"
+version = "Fk0Km5bb"
