--- a/mods/tweaks/interface/better-advancements.pw.toml
+++ b/mods/tweaks/interface/better-advancements.pw.toml
@@ -1,13 +1,13 @@
 name = "Better Advancements"
-filename = "BetterAdvancements-Fabric-1.20.1-0.3.2.162.jar"
+filename = "BetterAdvancements-Fabric-1.20.1-0.4.2.10.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Q2OqKxDG/versions/MoIoigS0/BetterAdvancements-Fabric-1.20.1-0.3.2.162.jar"
+url = "https://cdn.modrinth.com/data/Q2OqKxDG/versions/aefjQSuD/BetterAdvancements-Fabric-1.20.1-0.4.2.10.jar"
 hash-format = "sha1"
-hash = "eba2da34d2b0f842336abd8610e4b5e111c1598d"
+hash = "86d52d0318185ff398d107e0d4470e3dc72fdeac"
 
 [update]
 [update.modrinth]
 mod-id = "Q2OqKxDG"
-version = "MoIoigS0"
+version = "aefjQSuD"
