--- a/index.toml
+++ b/index.toml
@@ -378,19 +378,18 @@ file = "mods/content/furniture/handcrafted.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/content/hex-casting/hex-casting.pw.toml"
+file = "mods/content/hexcasting/hexal.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/content/hex-casting/hexal.pw.toml"
+file = "mods/content/hexcasting/hexcasting.toml"
+
+[[files]]
+file = "mods/content/hexcasting/hexdim.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/content/hex-casting/hexdim.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/content/hex-casting/moreiotas.pw.toml"
+file = "mods/content/hexcasting/moreiotas.pw.toml"
 metafile = true
 
 [[files]]
