--- a/mods/content/farmers-delight/ends-delight.pw.toml
+++ b/mods/content/farmers-delight/ends-delight.pw.toml
@@ -1,13 +1,13 @@
 name = "End's Delight"
-filename = "ends_delight-refabricated-1.20.1-alpha-1.0.jar"
+filename = "ends_delight-refabricated-1.20.1-2.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/yHN0njMr/versions/qfLYlJ59/ends_delight-refabricated-1.20.1-alpha-1.0.jar"
+url = "https://cdn.modrinth.com/data/yHN0njMr/versions/PBVRl0y6/ends_delight-refabricated-1.20.1-2.0.jar"
 hash-format = "sha1"
-hash = "7a946033e82d09f9bc76127bcc19aa7e05d6ccc4"
+hash = "f5f0caa3a7f1f8fd901b809688df95bc8f032bd2"
 
 [update]
 [update.modrinth]
 mod-id = "yHN0njMr"
-version = "qfLYlJ59"
+version = "PBVRl0y6"
