--- a/mods/libraries/lexiconfig.pw.toml
+++ b/mods/libraries/lexiconfig.pw.toml
@@ -1,13 +1,13 @@
 name = "Lexiconfig"
-filename = "Lexiconfig-fabric-1.2.11.jar"
+filename = "Lexiconfig-fabric-1.3.11.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/D157Rgyf/versions/f1O7hWf1/Lexiconfig-fabric-1.2.11.jar"
+url = "https://cdn.modrinth.com/data/D157Rgyf/versions/PwdyJM6K/Lexiconfig-fabric-1.3.11.jar"
 hash-format = "sha1"
-hash = "45d0a9ca945622bc5ea59789932af106a8b638ee"
+hash = "93a1642277ebe032f865e165094e5fb714833677"
 
 [update]
 [update.modrinth]
 mod-id = "D157Rgyf"
-version = "f1O7hWf1"
+version = "PwdyJM6K"
