--- a/mods/content/create/create-railways-navigator.pw.toml
+++ b/mods/content/create/create-railways-navigator.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Railways Navigator"
-filename = "createrailwaysnavigator-fabric-1.20.1-0.5.4.jar"
+filename = "createrailwaysnavigator-0.5.3-beta-1.20.1-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Dq3STxps/versions/DMehVe75/createrailwaysnavigator-fabric-1.20.1-0.5.4.jar"
+url = "https://cdn.modrinth.com/data/Dq3STxps/versions/5lYRaouO/createrailwaysnavigator-0.5.3-beta-1.20.1-fabric.jar"
 hash-format = "sha1"
-hash = "298aadef2b1dd266e689cff183c3af1168e5d6ff"
+hash = "77a7f1b41b3f684a31e388f53bf9caec9a4532fe"
 
 [update]
 [update.modrinth]
 mod-id = "Dq3STxps"
-version = "DMehVe75"
+version = "5lYRaouO"
