--- a/mods/content/create/copycats.pw.toml
+++ b/mods/content/create/copycats.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Copycats+"
-filename = "copycats-1.3.6+mc.1.20.1-fabric.jar"
+filename = "Copycats-fabric.1.20.1-1.3.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/UT2M39wf/versions/t8gHl18M/copycats-1.3.6%2Bmc.1.20.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/UT2M39wf/versions/FiaB6nOi/Copycats-fabric.1.20.1-1.3.4.jar"
 hash-format = "sha1"
-hash = "43e9740f53ecdc204cef83d09b147fe108caf7fc"
+hash = "1a87338d51927738b1652dad9daae70bf30f73f5"
 
 [update]
 [update.modrinth]
 mod-id = "UT2M39wf"
-version = "t8gHl18M"
+version = "FiaB6nOi"
