--- a/index.toml
+++ b/index.toml
@@ -86,6 +86,26 @@ metafile = true
 file = "config/tectonic.json"
 
 [[files]]
+file = "gwag/adorn.pw.toml"
+metafile = true
+
+[[files]]
+file = "gwag/better-end-rod.pw.toml"
+metafile = true
+
+[[files]]
+file = "gwag/cozy.pw.toml"
+metafile = true
+
+[[files]]
+file = "gwag/crops-love-rain.pw.toml"
+metafile = true
+
+[[files]]
+file = "gwag/yummy_glass.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/applied-energistics/ae2-qol-recipes.pw.toml"
 metafile = true
 
@@ -910,15 +930,7 @@ file = "mods/testing/adorabuild-structures.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/adorn.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/testing/better-end-cities-for-betterend.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/better-end-rod.pw.toml"
 metafile = true
 
 [[files]]
@@ -927,14 +939,6 @@ metafile = true
 
 [[files]]
 file = "mods/testing/cosmetic-nametags.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/cozy.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/crops-love-rain.pw.toml"
 metafile = true
 
 [[files]]
@@ -978,11 +982,15 @@ file = "mods/testing/passable-leaves.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/testing/pick-your-poison.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/testing/qraftyfied.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/yummy_glass.pw.toml"
+file = "mods/testing/satin-api.pw.toml"
 metafile = true
 
 [[files]]
