--- a/mods/libraries/collective.pw.toml
+++ b/mods/libraries/collective.pw.toml
@@ -1,13 +1,13 @@
 name = "Collective"
-filename = "collective-1.20.1-7.67.jar"
+filename = "collective-1.20.1-7.70.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/e0M1UDsY/versions/4wd19NbF/collective-1.20.1-7.67.jar"
+url = "https://cdn.modrinth.com/data/e0M1UDsY/versions/HhsvWQiL/collective-1.20.1-7.70.jar"
 hash-format = "sha1"
-hash = "18301dc634a35cc5d70082c6e87cd5df46d8f99b"
+hash = "4002756012d181d4c19ce20c70eeb56da1b15f16"
 
 [update]
 [update.modrinth]
 mod-id = "e0M1UDsY"
-version = "4wd19NbF"
+version = "HhsvWQiL"
