--- a/mods/utilities/emi/emi.pw.toml
+++ b/mods/utilities/emi/emi.pw.toml
@@ -1,13 +1,13 @@
 name = "EMI"
-filename = "emi-1.1.7+1.20.1+fabric.jar"
+filename = "emi-1.1.8+1.20.1+fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/fRiHVvU7/versions/MZiSLFZX/emi-1.1.7%2B1.20.1%2Bfabric.jar"
+url = "https://cdn.modrinth.com/data/fRiHVvU7/versions/PBtTeLpA/emi-1.1.8%2B1.20.1%2Bfabric.jar"
 hash-format = "sha1"
-hash = "8d984c76393ba4a6349b0bb98db9c49ed3a0a1c2"
+hash = "683c1147e6dd8d21a1e63433ed365c63aeeff96a"
 
 [update]
 [update.modrinth]
 mod-id = "fRiHVvU7"
-version = "MZiSLFZX"
+version = "PBtTeLpA"
