--- a/index.toml
+++ b/index.toml
@@ -986,6 +986,18 @@ file = "mods/testing/part2/yummy_glass.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/testing/vs/create-clockwork.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/vs/interactive.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/vs/valkyrien-skies.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/audio/dynamicsurroundingsfabric.pw.toml"
 metafile = true
 
