--- a/mods/content/mobs/friends-and-foes.pw.toml
+++ b/mods/content/mobs/friends-and-foes.pw.toml
@@ -1,13 +1,13 @@
 name = "Friends&Foes (Fabric/Quilt)"
-filename = "friendsandfoes-fabric-mc1.20.1-2.0.10.jar"
+filename = "friendsandfoes-fabric-mc1.20.1-2.0.11.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/POQ2i9zu/versions/fzG0atxM/friendsandfoes-fabric-mc1.20.1-2.0.10.jar"
+url = "https://cdn.modrinth.com/data/POQ2i9zu/versions/atOVJW4r/friendsandfoes-fabric-mc1.20.1-2.0.11.jar"
 hash-format = "sha1"
-hash = "3d6f88171878f8f1f9d61ca7e5d3851832e6d1dd"
+hash = "746283453bdaa10860cf7a91f290e026cb706990"
 
 [update]
 [update.modrinth]
 mod-id = "POQ2i9zu"
-version = "fzG0atxM"
+version = "atOVJW4r"
