--- a/mods/testing/part2/adorabuild-structures.pw.toml
+++ b/mods/testing/part2/adorabuild-structures.pw.toml
@@ -1,13 +1,13 @@
 name = "AdoraBuild: Structures"
-filename = "adorabuild-structures-2.6.0-fabric-1.20.2.jar"
+filename = "adorabuild-structures-2.7.0-fabric-1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/rYlnn25U/versions/qQP3RGoX/adorabuild-structures-2.6.0-fabric-1.20.2.jar"
+url = "https://cdn.modrinth.com/data/rYlnn25U/versions/7uE7Y0HH/adorabuild-structures-2.7.0-fabric-1.20.1.jar"
 hash-format = "sha1"
-hash = "1a542c42b8f907a3445239f0e7b11d7a88d9a941"
+hash = "14c39f5b8636622a5efdcea3e52766e3df6ac3c4"
 
 [update]
 [update.modrinth]
 mod-id = "rYlnn25U"
-version = "qQP3RGoX"
+version = "7uE7Y0HH"
