--- a/mods/worldgen/end/nullscape.pw.toml
+++ b/mods/worldgen/end/nullscape.pw.toml
@@ -1,13 +1,13 @@
 name = "Nullscape"
-filename = "Nullscape_1.20.x_v1.2.6.jar"
+filename = "Nullscape_1.20.x_v1.2.7.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/LPjGiSO4/versions/YRGl9OtT/Nullscape_1.20.x_v1.2.6.jar"
+url = "https://cdn.modrinth.com/data/LPjGiSO4/versions/IGSIk1BM/Nullscape_1.20.x_v1.2.7.jar"
 hash-format = "sha1"
-hash = "ad4ca87b175560dc6a46e5137f188a5f919e3ec9"
+hash = "7084e5730522809e7f4005d2c287a9ffccf42acd"
 
 [update]
 [update.modrinth]
 mod-id = "LPjGiSO4"
-version = "YRGl9OtT"
+version = "IGSIk1BM"
