--- a/mods/content/create/create-railways-navigator.pw.toml
+++ b/mods/content/create/create-railways-navigator.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Railways Navigator"
-filename = "createrailwaysnavigator-0.5.3-beta-1.20.1-fabric.jar"
+filename = "createrailwaysnavigator-fabric-1.20.1-0.5.5.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Dq3STxps/versions/5lYRaouO/createrailwaysnavigator-0.5.3-beta-1.20.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/Dq3STxps/versions/WAEhiqHN/createrailwaysnavigator-fabric-1.20.1-0.5.5.jar"
 hash-format = "sha1"
-hash = "77a7f1b41b3f684a31e388f53bf9caec9a4532fe"
+hash = "b458ad4fab580b86175c8315632ac9c1a80548b4"
 
 [update]
 [update.modrinth]
 mod-id = "Dq3STxps"
-version = "5lYRaouO"
+version = "WAEhiqHN"
