--- a/mods/content/mobs/friends-and-foes-flowery-mooblooms-fabric.pw.toml
+++ b/mods/content/mobs/friends-and-foes-flowery-mooblooms-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Friends&Foes - Flowery Mooblooms (Fabric/Quilt)"
-filename = "friendsandfoes-flowerymooblooms-fabric-mc1.20.1-2.0.1.jar"
+filename = "flowerymooblooms-fabric-mc1.20.1-2.0.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/ECOSu6pa/versions/s0xEE5NG/friendsandfoes-flowerymooblooms-fabric-mc1.20.1-2.0.1.jar"
+url = "https://cdn.modrinth.com/data/ECOSu6pa/versions/D9jX5JX6/flowerymooblooms-fabric-mc1.20.1-2.0.2.jar"
 hash-format = "sha1"
-hash = "f54c1dcb8474da3d71a844210012d9b2fa570ed6"
+hash = "4cb1976f9e95a9bcf82c7197c0656d461d4d5d2e"
 
 [update]
 [update.modrinth]
 mod-id = "ECOSu6pa"
-version = "s0xEE5NG"
+version = "D9jX5JX6"
