--- a/mods/tweaks/interface/craftpresence.pw.toml
+++ b/mods/tweaks/interface/craftpresence.pw.toml
@@ -1,13 +1,13 @@
 name = "CraftPresence"
-filename = "CraftPresence-2.4.3+1.20.1.jar"
+filename = "CraftPresence-2.5.0+1.20.1-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/DFqQfIBR/versions/oIpViecx/CraftPresence-2.4.3%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/DFqQfIBR/versions/CbggnOEI/CraftPresence-2.5.0%2B1.20.1-fabric.jar"
 hash-format = "sha1"
-hash = "1cacf689b1a804a807e9ca298a3aef8b283843e3"
+hash = "d34924e8df7679fed55da94e0d92c7e25cb9bab3"
 
 [update]
 [update.modrinth]
 mod-id = "DFqQfIBR"
-version = "oIpViecx"
+version = "CbggnOEI"
