--- a/mods/libraries/collective.pw.toml
+++ b/mods/libraries/collective.pw.toml
@@ -1,13 +1,13 @@
 name = "Collective"
-filename = "collective-1.20.1-7.71.jar"
+filename = "collective-1.20.1-7.84.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/e0M1UDsY/versions/4PHvK72M/collective-1.20.1-7.71.jar"
+url = "https://cdn.modrinth.com/data/e0M1UDsY/versions/jo7YkyNS/collective-1.20.1-7.84.jar"
 hash-format = "sha1"
-hash = "d6a6a0784c1799cf4be66e4af3c6cc7e8d57fc07"
+hash = "522cacd5b741c0be904f573695820b2ffb9affc9"
 
 [update]
 [update.modrinth]
 mod-id = "e0M1UDsY"
-version = "4PHvK72M"
+version = "jo7YkyNS"
