--- a/mods/tweaks/gameplay/unloaded-activity.pw.toml
+++ b/mods/tweaks/gameplay/unloaded-activity.pw.toml
@@ -1,13 +1,13 @@
 name = "Unloaded Activity"
-filename = "unloadedactivity-v0.5.4+1.20-1.20.1.jar"
+filename = "unloadedactivity-v0.6.3+1.20-1.20.1.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/Oo4rJCDP/versions/xdW3fTZy/unloadedactivity-v0.5.4%2B1.20-1.20.1.jar"
+url = "https://cdn.modrinth.com/data/Oo4rJCDP/versions/HBkpQoBq/unloadedactivity-v0.6.3%2B1.20-1.20.1.jar"
 hash-format = "sha1"
-hash = "8918f2356777e848192c28f144cd5fba2f9aa903"
+hash = "debeaa9ab84e7cfa6d9b7fc1477dbe3c38270b83"
 
 [update]
 [update.modrinth]
 mod-id = "Oo4rJCDP"
-version = "xdW3fTZy"
+version = "HBkpQoBq"
