--- a/mods/content/applied-energistics/ae2.pw.toml
+++ b/mods/content/applied-energistics/ae2.pw.toml
@@ -1,13 +1,13 @@
 name = "Applied Energistics 2"
-filename = "appliedenergistics2-fabric-15.2.9.jar"
+filename = "appliedenergistics2-fabric-15.2.12.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/XxWD5pD3/versions/fatWoH9r/appliedenergistics2-fabric-15.2.9.jar"
+url = "https://cdn.modrinth.com/data/XxWD5pD3/versions/xmoW71GF/appliedenergistics2-fabric-15.2.12.jar"
 hash-format = "sha1"
-hash = "de1bb69a97c688ba738586278c0e25c03ad8e399"
+hash = "4a92bf47482c371a17ac1374834adbf45ded3938"
 
 [update]
 [update.modrinth]
 mod-id = "XxWD5pD3"
-version = "fatWoH9r"
+version = "xmoW71GF"
