--- a/mods/content/other/exposure.pw.toml
+++ b/mods/content/other/exposure.pw.toml
@@ -1,13 +1,13 @@
 name = "Exposure"
-filename = "exposure-1.20.1-1.7.2-fabric.jar"
+filename = "exposure-1.20.1-1.7.5-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/hB899VmG/versions/xFW7G1Eo/exposure-1.20.1-1.7.2-fabric.jar"
+url = "https://cdn.modrinth.com/data/hB899VmG/versions/jyDC9Jdy/exposure-1.20.1-1.7.5-fabric.jar"
 hash-format = "sha1"
-hash = "4f98ca6b421c8e9efacabd431674b91779fab75e"
+hash = "6c5c608d9e0364b798d9bb257000577f12cdaa95"
 
 [update]
 [update.modrinth]
 mod-id = "hB899VmG"
-version = "xFW7G1Eo"
+version = "jyDC9Jdy"
