--- a/mods/libraries/moonlight.pw.toml
+++ b/mods/libraries/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.12.6-fabric.jar"
+filename = "moonlight-1.20-2.12.12-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/HYSnbbuA/moonlight-1.20-2.12.6-fabric.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/XIdLTi85/moonlight-1.20-2.12.12-fabric.jar"
 hash-format = "sha1"
-hash = "4e2e3a0ad3da3e9d5e8264ec6ee8455e08e0c8d6"
+hash = "a6a17d8297165b1e852c8be71ddea2a4713a4621"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "HYSnbbuA"
+version = "XIdLTi85"
