--- a/mods/libraries/mru.pw.toml
+++ b/mods/libraries/mru.pw.toml
@@ -1,13 +1,13 @@
 name = "M.R.U"
-filename = "mru-0.4.4+1.20.1.jar"
+filename = "MRU-1.0.0+1.20.1+fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/SNVQ2c0g/versions/IWJh0MMO/mru-0.4.4%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/SNVQ2c0g/versions/cFoqsQie/MRU-1.0.0%2B1.20.1%2Bfabric.jar"
 hash-format = "sha1"
-hash = "c522965ab1bc4a5d8a32fcaec83036ee99808972"
+hash = "bbebebbb08fcb0ff6f3d93fac60b4920c36c747b"
 
 [update]
 [update.modrinth]
 mod-id = "SNVQ2c0g"
-version = "IWJh0MMO"
+version = "cFoqsQie"
