--- a/mods/performance/modernfix.pw.toml
+++ b/mods/performance/modernfix.pw.toml
@@ -1,13 +1,13 @@
 name = "ModernFix"
-filename = "modernfix-fabric-5.18.10+mc1.20.1.jar"
+filename = "modernfix-fabric-5.19.1+mc1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/nmDcB62a/versions/nHo5y93M/modernfix-fabric-5.18.10%2Bmc1.20.1.jar"
+url = "https://cdn.modrinth.com/data/nmDcB62a/versions/nJmQaEws/modernfix-fabric-5.19.1%2Bmc1.20.1.jar"
 hash-format = "sha1"
-hash = "e2650a9c7b742a0ab1294650225d6da405be9e94"
+hash = "23c2ef13fc2ad112ae796ad0982f2e6c0e6a8f6a"
 
 [update]
 [update.modrinth]
 mod-id = "nmDcB62a"
-version = "nHo5y93M"
+version = "nJmQaEws"
