--- a/mods/tweaks/gameplay/companion.pw.toml
+++ b/mods/tweaks/gameplay/companion.pw.toml
@@ -1,13 +1,13 @@
 name = "Companion 🐕"
-filename = "Companion-1.20-fabric-5.1.0.jar"
+filename = "Companion-1.20.1-fabric-5.2.0.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/4w0EzGRW/versions/gqjOYbM8/Companion-1.20-fabric-5.1.0.jar"
+url = "https://cdn.modrinth.com/data/4w0EzGRW/versions/8TD76y1j/Companion-1.20.1-fabric-5.2.0.jar"
 hash-format = "sha1"
-hash = "88cb4fc07f94c9127dfc0304e0ff646a23443ce3"
+hash = "82d9a13c88dde7e5babad4a2a692642780541988"
 
 [update]
 [update.modrinth]
 mod-id = "4w0EzGRW"
-version = "gqjOYbM8"
+version = "8TD76y1j"
