--- a/mods/tweaks/gameplay/grass-seeds.pw.toml
+++ b/mods/tweaks/gameplay/grass-seeds.pw.toml
@@ -1,13 +1,13 @@
 name = "Grass Seeds"
-filename = "grassseeds-1.20.1-3.2.jar"
+filename = "grassseeds-1.20.1-3.3.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/Y6d4uRJn/versions/Eb3Jj0un/grassseeds-1.20.1-3.2.jar"
+url = "https://cdn.modrinth.com/data/Y6d4uRJn/versions/JCsvrptD/grassseeds-1.20.1-3.3.jar"
 hash-format = "sha1"
-hash = "df4e6dd4e2d482be3200af6f77c1ac90dc3f0f74"
+hash = "975d77c496f77166943df78cbf6dbd362b1a9af7"
 
 [update]
 [update.modrinth]
 mod-id = "Y6d4uRJn"
-version = "Eb3Jj0un"
+version = "JCsvrptD"
