--- a/mods/tweaks/hud/chat-heads.pw.toml
+++ b/mods/tweaks/hud/chat-heads.pw.toml
@@ -1,13 +1,13 @@
 name = "Chat Heads"
-filename = "chat_heads-0.12.7-fabric-1.20.jar"
+filename = "chat_heads-0.12.13-fabric-1.20.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/8150qC1W/chat_heads-0.12.7-fabric-1.20.jar"
+url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/MdoSw2dL/chat_heads-0.12.13-fabric-1.20.jar"
 hash-format = "sha1"
-hash = "42749d7c0cd0ef67109bf17bf4946a4ae571c0d6"
+hash = "3ca2e18866f1c297e30075148c216a3e833ef9b4"
 
 [update]
 [update.modrinth]
 mod-id = "Wb5oqrBJ"
-version = "8150qC1W"
+version = "MdoSw2dL"
