--- a/mods/tweaks/gameplay/yigd.pw.toml
+++ b/mods/tweaks/gameplay/yigd.pw.toml
@@ -1,13 +1,13 @@
 name = "You're in Grave Danger"
-filename = "youre-in-grave-danger-fabric-2.4.5.jar"
+filename = "youre-in-grave-danger-fabric-2.0.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/HnD1GX6e/versions/aicF5m0R/youre-in-grave-danger-fabric-2.4.5.jar"
+url = "https://cdn.modrinth.com/data/HnD1GX6e/versions/tEfDHuTy/youre-in-grave-danger-fabric-2.0.4.jar"
 hash-format = "sha1"
-hash = "c0d51afefcf02a355c2af25a4c28494979bb9bc7"
+hash = "459fd0e41c03d50c92ca85cb6e2eef2f1f2103c4"
 
 [update]
 [update.modrinth]
 mod-id = "HnD1GX6e"
-version = "aicF5m0R"
+version = "tEfDHuTy"
