--- a/mods/tweaks/audio/sound.pw.toml
+++ b/mods/tweaks/audio/sound.pw.toml
@@ -1,13 +1,13 @@
 name = "Sounds"
-filename = "Sounds-1.0.1+1.20.1.jar"
+filename = "Sounds-1.1.5+1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/ZouiUX7t/versions/5MMDOc9T/Sounds-1.0.1%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/ZouiUX7t/versions/ZvLhtpTK/Sounds-1.1.5%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "3f6b187bb3b3b242de8acfdac1b454866be9f3b7"
+hash = "44aaa0891783529675197e73a5c82c1104ac1723"
 
 [update]
 [update.modrinth]
 mod-id = "ZouiUX7t"
-version = "5MMDOc9T"
+version = "ZvLhtpTK"
