--- a/mods/libraries/cicada.pw.toml
+++ b/mods/libraries/cicada.pw.toml
@@ -1,13 +1,13 @@
 name = "CICADA"
-filename = "cicada-lib-0.8.1+1.20.1.jar"
+filename = "cicada-lib-0.8.3+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/IwCkru1D/versions/ZSSZMYi4/cicada-lib-0.8.1%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/IwCkru1D/versions/Kuqg1f1T/cicada-lib-0.8.3%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "01c35545e480be3033725c666118a825f8dc08c1"
+hash = "76ec352f974c755e9ae67419ff500cc5f408b932"
 
 [update]
 [update.modrinth]
 mod-id = "IwCkru1D"
-version = "ZSSZMYi4"
+version = "Kuqg1f1T"
