--- a/mods/tweaks/gameplay/scaffolding-drops-nearby.pw.toml
+++ b/mods/tweaks/gameplay/scaffolding-drops-nearby.pw.toml
@@ -1,13 +1,13 @@
 name = "Scaffolding Drops Nearby"
-filename = "scaffoldingdropsnearby-1.20.1-3.2.jar"
+filename = "scaffoldingdropsnearby-1.20.1-3.3.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/uO522mgw/versions/zSTzYkJu/scaffoldingdropsnearby-1.20.1-3.2.jar"
+url = "https://cdn.modrinth.com/data/uO522mgw/versions/g4Sod5Qo/scaffoldingdropsnearby-1.20.1-3.3.jar"
 hash-format = "sha1"
-hash = "2241c24e52596094b4e044704d90b24f2d6044a7"
+hash = "e1d0814d7a3fd94699b3f80840c3016244a8f4e3"
 
 [update]
 [update.modrinth]
 mod-id = "uO522mgw"
-version = "zSTzYkJu"
+version = "g4Sod5Qo"
