--- a/mods/content/create/create-train-perspective.pw.toml
+++ b/mods/content/create/create-train-perspective.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Train Perspective"
-filename = "create-train-perspective-0.5.0+mc1.20.1.jar"
+filename = "create-train-perspective-0.6.1+mc1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/MAuPqvf1/versions/tuGWdBsA/create-train-perspective-0.5.0%2Bmc1.20.1.jar"
+url = "https://cdn.modrinth.com/data/MAuPqvf1/versions/Tx7TsScp/create-train-perspective-0.6.1%2Bmc1.20.1.jar"
 hash-format = "sha1"
-hash = "957beb26886f9e68665160261fba97856478de80"
+hash = "59d9b305e29dfc9bc4e47731647b9b696d18cb23"
 
 [update]
 [update.modrinth]
 mod-id = "MAuPqvf1"
-version = "tuGWdBsA"
+version = "Tx7TsScp"
