--- a/mods/tweaks/gameplay/snow-under-trees-remastered.pw.toml
+++ b/mods/tweaks/gameplay/snow-under-trees-remastered.pw.toml
@@ -1,13 +1,13 @@
 name = "Snow Under Trees (Fabric)"
-filename = "SnowUnderTrees-2.4.0+1.20.1.jar"
+filename = "SnowUnderTrees-2.5.1+1.20.1.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/XVnUIUAQ/versions/1ndPt7V4/SnowUnderTrees-2.4.0%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/XVnUIUAQ/versions/i2E71Kma/SnowUnderTrees-2.5.1%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "bb3e5f965ce94c0b0b5ca0869c9ad4f23ff140a7"
+hash = "e26c23fc6f3246d019d64c38a97fe2698673bd36"
 
 [update]
 [update.modrinth]
 mod-id = "XVnUIUAQ"
-version = "1ndPt7V4"
+version = "i2E71Kma"
