--- a/index.toml
+++ b/index.toml
@@ -1466,6 +1466,10 @@ file = "mods/utilities/ledger.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/utilities/luckperms.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/utilities/simple-voice-chat/simple-voice-chat-radio.pw.toml"
 metafile = true
 
