--- a/mods/worldgen/end/nullscape.pw.toml
+++ b/mods/worldgen/end/nullscape.pw.toml
@@ -1,6 +1,6 @@
 name = "Nullscape"
 filename = "Nullscape_1.20.x_v1.2.7.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/LPjGiSO4/versions/IGSIk1BM/Nullscape_1.20.x_v1.2.7.jar"
