--- a/mods/custom/nsmp-structurefix.pw.toml
+++ b/mods/custom/nsmp-structurefix.pw.toml
@@ -1,6 +1,6 @@
 name = "nsmp-structurefix"
 filename = "nsmp-structurefix-0.1.9+1.20.1-server.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://github.com/nekosmp/nsmp-structurefix/releases/download/mc1.20.1/v0.1.9/nsmp-structurefix-0.1.9%2B1.20.1-server.jar"
