--- a/mods/testing/part1/cycle-paintings.pw.toml
+++ b/mods/testing/part1/cycle-paintings.pw.toml
@@ -1,6 +1,6 @@
 name = "Cycle Paintings"
 filename = "cyclepaintings-1.20.1-3.6.jar"
-side = "server"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/c85whkNB/versions/qtgGJN2o/cyclepaintings-1.20.1-3.6.jar"
