--- a/mods/tweaks/gameplay/grass-seeds.pw.toml
+++ b/mods/tweaks/gameplay/grass-seeds.pw.toml
@@ -1,6 +1,6 @@
 name = "Grass Seeds"
 filename = "grassseeds-1.20.1-3.3.jar"
-side = "server"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/Y6d4uRJn/versions/JCsvrptD/grassseeds-1.20.1-3.3.jar"
