--- a/mods/tweaks/gameplay/scaffolding-drops-nearby.pw.toml
+++ b/mods/tweaks/gameplay/scaffolding-drops-nearby.pw.toml
@@ -1,6 +1,6 @@
 name = "Scaffolding Drops Nearby"
 filename = "scaffoldingdropsnearby-1.20.1-3.3.jar"
-side = "server"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/uO522mgw/versions/g4Sod5Qo/scaffoldingdropsnearby-1.20.1-3.3.jar"
