--- a/mods/utilities/luckperms.pw.toml
+++ b/mods/utilities/luckperms.pw.toml
@@ -1,6 +1,6 @@
 name = "LuckPerms"
 filename = "LuckPerms-Fabric-5.4.102.jar"
-side = "server"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/Vebnzrzj/versions/7PNj6nCm/LuckPerms-Fabric-5.4.102.jar"
