--- a/mods/content/create/create-track-map.pw.toml
+++ b/mods/content/create/create-track-map.pw.toml
@@ -1,6 +1,6 @@
 name = "Create Track Map"
 filename = "create-track-map-1.4+mc1.20.1-fabric.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/gxoNIjg6/versions/qoyYyg2G/create-track-map-1.4%2Bmc1.20.1-fabric.jar"
