--- a/mods/tweaks/gameplay/rightclickharvest.pw.toml
+++ b/mods/tweaks/gameplay/rightclickharvest.pw.toml
@@ -1,6 +1,6 @@
 name = "RightClickHarvest"
 filename = "right-click-harvest-3.2.3+1.19.x-1.20.1-fabric.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/Cnejf5xM/versions/4UWabEWo/right-click-harvest-3.2.3%2B1.19.x-1.20.1-fabric.jar"
