--- a/mods/tweaks/gameplay/smarter-farmers-farmers-replant.pw.toml
+++ b/mods/tweaks/gameplay/smarter-farmers-farmers-replant.pw.toml
@@ -1,6 +1,6 @@
 name = "Smarter Farmers (farmers replant)"
 filename = "smarterfarmers-1.20-2.0.0-fabric.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/Bh6ZOMvp/versions/WdKOQloC/smarterfarmers-1.20-2.0.0-fabric.jar"
