--- a/mods/utilities/fastback.pw.toml
+++ b/mods/utilities/fastback.pw.toml
@@ -1,6 +1,6 @@
 name = "Fast Backups"
 filename = "fastback-0.15.6+1.20.1-fabric.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/ZHKrK8Rp/versions/Q8JSGhdj/fastback-0.15.6%2B1.20.1-fabric.jar"
