--- a/mods/utilities/fullstack-watchdog.pw.toml
+++ b/mods/utilities/fullstack-watchdog.pw.toml
@@ -1,6 +1,6 @@
 name = "FullStack Watchdog"
 filename = "fullstackwatchdog-1.0.1+1.19.2-fabric.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/oZiSDGCi/versions/bQS4RMW3/fullstackwatchdog-1.0.1%2B1.19.2-fabric.jar"
