--- a/mods/utilities/invview.pw.toml
+++ b/mods/utilities/invview.pw.toml
@@ -1,6 +1,6 @@
 name = "Inv View"
 filename = "InvView-1.4.12-1.20+.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/jrDKjZP7/versions/mQnjqDOd/InvView-1.4.12-1.20%2B.jar"
